style/preview.css
.preview {
    max-height: calc(100vh - 48px);
    max-width: 1200px;
    padding: 15px;
    margin: 0 auto;
    color: var(--text-color);
    background-color: transparent;
    display: none;
    overflow: scroll;
    font-family: var(--font-text);
    box-sizing: border-box;
}

.preview:focus {
    outline:none;
}

.preview.on {
    display: block;
}

/* titles */

.preview h1, .preview h2, .preview h3, .preview h4, .preview h5, .preview h6 {
    width: 100%;
    font-family: var(--font-title);
    color: var(--title-color);
    padding-top: 15px;
}

.preview h1 {
    font-size: 2.5rem;
    margin: 1.5rem 0;
}

.preview h2 {
    font-size: 2rem;
    margin: 1.4rem 0;
}

.preview h3 {
    font-size: 1.75rem;
    margin: 1.3rem 0;
}

.preview h4 {
    font-size: 1.5rem;
    margin: 1.2rem 0;
}

.preview h5 {
    font-size: 1.25rem;
    margin: 1.1rem 0;
}

.preview h6 {
    font-size: 1rem;
    margin: 1rem 0;
}

/* rules */
.preview hr {
    border: 0;
    border-bottom: 1px solid var(--border-light-color);
    width: 100%;
    margin-top: 30px;
    margin-bottom: 30px;
}

/* text effects */

.preview del:hover {
    text-decoration: none;
}

/* quotes */

.preview blockquote {
    border-left: 2px solid var(--border-light-color);
    padding-left: 15px;
}

.preview .quote-label {
    display: inline-flex;
    align-items: center;
    gap: 2px;
    font-size: large;
    cursor: text;
}

.preview .quote-label .icon {
    cursor: default;
    user-select: none;
}

.preview blockquote.quote-generic,
.preview blockquote.quote-blue,
.preview blockquote.quote-green,
.preview blockquote.quote-purple,
.preview blockquote.quote-yellow,
.preview blockquote.quote-red {
    padding: 10px 15px 10px 15px;
    border-radius: 15px;
    box-shadow: var(--shadow);
}

.preview blockquote.quote-generic {
    border: 1px solid var(--border-light-color);
    background-color: var(--background-color-3);
}

.preview blockquote.quote-blue {
    border: 1px solid var(--quote-blue);
    background-color: var(--quote-blue-bg);
}

.preview .quote-blue-label {
    color: var(--quote-blue);
}

.preview blockquote.quote-green {
    border: 1px solid var(--quote-green);
    background-color: var(--quote-green-bg);
}

.preview .quote-green-label {
    color: var(--quote-green);
}

.preview blockquote.quote-purple {
    border: 1px solid var(--quote-purple);
    background-color: var(--quote-purple-bg);
}

.preview .quote-purple-label {
    color: var(--quote-purple);
}

.preview blockquote.quote-yellow {
    border: 1px solid var(--quote-yellow);
    background-color: var(--quote-yellow-bg);
}

.preview .quote-yellow-label {
    color: var(--quote-yellow);
}

.preview blockquote.quote-red {
    border: 1px solid var(--quote-red);
    background-color: var(--quote-red-bg);
}

.preview .quote-red-label {
    color: var(--quote-red);
}

.preview .code-container {
    position: relative;
    margin: 20px 0;
    border-radius: 10px;
    background-color: var(--background-color-2);
    max-width: 100%;
    overflow-x: scroll;
    padding: 0;
    box-shadow: var(--shadow-light);
}

.preview .code-container .code-head {
    position: absolute;
    top: 8px;
    right: 12px;
    z-index: 2;
    background: none;
    padding: 0;
    display: flex;
    align-items: center;
    gap: 10px;
    font-family: var(--font-editor);
    justify-content: end;
    border-radius: 8px;
}

.preview .code-container pre,
.preview .code-container pre.ghcodeblock {
    margin: 0;
    border-radius: 10px;
    background: none;
    box-shadow: none;
    max-width: 100%;
    overflow-x: auto;
    padding: 18px 10px 10px 10px;
    position: relative;
}

.preview .code-container code {
    background: transparent;
    padding: 0;
    border-radius: 0;
    font-size: medium;
    box-shadow: none;
}

.preview .code-container .code-head button {
    border: 0;
    padding: 0;
    width: 24px;
    height: 24px;
    border-radius: 100px;
    background-color: var(--background-color-2);
    cursor: pointer;
}

.preview .code-head {
    all: unset;
}

.preview code {
    background-color: var(--background-color-2);
    padding: 2px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 8px;
    font-family: var(--font-editor);
    font-size: medium;
    box-shadow: var(--shadow-light);
}

.preview .colorSwatch {
    display: inline-block;
    width: .7em;
    height: .7em;
    vertical-align: middle;
    border-radius: 30px;
}

/* images */

.preview .media-container {
    position: relative;
    display: inline-block;
}

.preview .media-container div {
    position: absolute;
    top: 10px;
    left: 15px;
    color: white;
    font-size: large;
    display: none;
    opacity: 0%;
    z-index: 2;
    transition: opacity 1s;
    max-width: 80%;
    box-sizing: border-box;
    text-shadow: 0px 0px 10px black;
}

.preview .media-container div .alt,
.preview .media-container div .url {
    display: block;
}

.preview .media-container div .url {
    font-size: small;
}

.preview .media-container:hover div {
    display: block;
    opacity: 100%;
}

.preview .media-container img,
.preview .media-container video {
    display: block;
    max-width: 100%;
    border-radius: 10px;
    transition: filter 0.3s;
}

.preview .media-container:hover img,
.preview .media-container:hover video {
    filter: brightness(.6);
}

.preview .media-container:hover video:fullscreen {
    filter: brightness(1);
    border-radius: 0px;
}

.preview .media-container audio + div,
.preview .media-container:hover audio + div {
    display: none !important;
    opacity: 0 !important;
}

/* links */

.preview a {
    color: var(--link-color);
    display: inline-flex;
    align-items: center;
    gap: 5px;
    text-decoration: none;
}

.preview a:hover {
    text-decoration: underline;
}

.preview a img.favicon {
    border: none;
    width: 16px;
    height: 16px;
    border-radius: 2px;
    margin: 0px;
}

/* lists */

.preview li {
    margin-bottom: 10px;
}
/* ... */

